# job-parser

./: .gitignore  README.md  main.py  pyproject.toml
src/: job_api.py  saver.py  vacancy.py
